--- a/src/WeatherForm.css
+++ b/src/WeatherForm.css
@@ -1,6 +1,16 @@
+.WeatherForm .weatherSearch {
+	margin-left: 17px;
+}
+
+.WeatherForm .searchBox {
+	margin: 15px;
+	padding: 10px;
+}
+
 .WeatherForm button {
 	position: relative;
-	bottom: 2px;
+	top: 17px;
+	left: 5px;
 	background: linear-gradient(
 		110.9deg,
 		rgb(159, 131, 216) 2.6%,
@@ -12,8 +22,7 @@
 	font-size: 14px;
 	font-style: italic;
 	font-weight: 800;
-	text-transform: uppercase;
-	padding: 10px 26px;
+	padding: 11px 28px;
 	transition: all 425ms ease-in-out;
 }
 
@@ -30,28 +39,22 @@
 		1;
 }
 
-.WeatherForm .searchBox {
-	border: 1px solid #cecece;
-	border-radius: 0;
-}
-
 .WeatherForm h3,
 li,
 small {
 	position: relative;
 }
 
+.WeatherForm h3, ul, li {
+	text-align: center;
+}
+
 .WeatherForm h3 {
 	color: #757575;
 	font-size: 48px;
 	font-weight: 600;
-	left: 45px;
+	left: 36px;
 	top: 20px;
-}
-
-.WeatherForm small {
-	font-size: 22px;
-	bottom: 18px;
 }
 
 .WeatherForm li {
@@ -59,5 +62,10 @@ small {
 	list-style: none;
 	font-size: 16px;
 	color: #757575;
-	right: 46px;
+	right: 22px;
+}
+
+.WeatherForm small {
+	font-size: 22px;
+	bottom: 18px;
 }
